--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ site_author: Aaron S.B.
 site_description: A literary science fiction series exploring how gravity affects consciousness evolution across human colonies
 site_url: https://aaronsb.github.io/quantum-gravity/
 
-docs_dir: .
-site_dir: _site
+# Remove docs_dir to use default 'docs' directory
+# site_dir will be outside of docs directory
 
 theme:
   name: material
@@ -34,40 +34,6 @@ theme:
 
 nav:
   - Home: index.md
-  - Book 1 - The Beautiful Failure:
-    - Overview: book-1-the-beautiful-failure/README.md
-    - Story Arc: book-1-the-beautiful-failure/story-arc.md
-    - Chapter 01 - First Contact:
-      - Overview: book-1-the-beautiful-failure/01-first-contact/README.md
-      - Coffee on Luna: book-1-the-beautiful-failure/01-first-contact/coffee-on-luna.md
-      - The Pause: book-1-the-beautiful-failure/01-first-contact/the-pause.md
-      - Translation Hiccup: book-1-the-beautiful-failure/01-first-contact/translation-hiccup.md
-      - What We Don't Say: book-1-the-beautiful-failure/01-first-contact/what-we-dont-say.md
-    - Chapter 02 - The Recognition:
-      - Overview: book-1-the-beautiful-failure/02-the-recognition/README.md
-      - Absence as Presence: book-1-the-beautiful-failure/02-the-recognition/absence-as-presence.md
-      - Frequency: book-1-the-beautiful-failure/02-the-recognition/frequency.md
-      - Seventy-Three Point Two: book-1-the-beautiful-failure/02-the-recognition/seventy-three-point-two.md
-      - The Untranslatable Word: book-1-the-beautiful-failure/02-the-recognition/the-untranslatable-word.md
-    - Chapter 03 - The Drift:
-      - Overview: book-1-the-beautiful-failure/03-the-drift/README.md
-      - The Last Clear Conversation: book-1-the-beautiful-failure/03-the-drift/the-last-clear-conversation.md
-    - Chapter 04 - The Translators:
-      - Overview: book-1-the-beautiful-failure/04-the-translators/README.md
-    - Chapter 05 - The Choice:
-      - Overview: book-1-the-beautiful-failure/05-the-choice/README.md
-      - Choosing Mars: book-1-the-beautiful-failure/05-the-choice/choosing-mars.md
-    - Chapter 06 - The Beautiful Failure:
-      - Overview: book-1-the-beautiful-failure/06-the-beautiful-failure/README.md
-      - Love Across Gravity: book-1-the-beautiful-failure/06-the-beautiful-failure/love-across-gravity.md
-      - The Beautiful Failure: book-1-the-beautiful-failure/06-the-beautiful-failure/the-beautiful-failure.md
-  - Worldbuilding:
-    - Gravity & Consciousness: worldbuilding/gravity-consciousness-revised-worldbuilding.md
-    - Writing Guide: worldbuilding/gravity-consciousness-writing-guide.md
-  - Style Guides:
-    - Our Unique Style: style-guides/our-unique-style.md
-    - Writing Mechanics: style-guides/mechanical-writing-metrics.md
-    - First Book Focus: style-guides/first-book-focus.md
 
 markdown_extensions:
   - pymdownx.highlight:
