--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -1,4 +1,4 @@
-name: Build MkDocs site
+name: Build and Deploy MkDocs
 
 on:
   push:
@@ -7,34 +7,37 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout main branch
         uses: actions/checkout@v4
         with:
           persist-credentials: true
-          fetch-depth: 0
-        
+          
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
           
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
           
       - name: Build MkDocs site
+        run: mkdocs build
+        
+      - name: Deploy to GitHub Pages branch
         run: |
-          mkdocs build -d docs
-          touch docs/.nojekyll
-          
-      - name: Commit and push if changed
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add docs/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Build MkDocs site" && git push)
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
+          git checkout --orphan gh-pages
+          git rm -rf .
+          cp -r site/* .
+          touch .nojekyll
+          git add -A
+          git commit -m "Deploy MkDocs site to GitHub Pages"
+          git push -f origin gh-pages
